# Halib

./: CMakeLists.txt  README.md
_old_include/Halib/: Audio.h  Graphic.h  System.h
_old_include/Halib/Audio/: Audio.h  Audiosystem.h
_old_include/Halib/Graphic/: Color.h  Rect.h  Rendersystem.h
_old_source/: Entitysystem.cpp
_old_source/Graphic/: Render.cpp
include/: CrashHandler.h  ECSException.h  ECSSystem.h  ECSSystem_Header.h  Engine.h  EngineException.h  EntityUtility.h  FileSystem.h  GlobalGameEvents.h  Input.h  Miscellaneous.h  Scene.h  SceneManager.h  Systems.h  TimeManager.h
include/ECS/: ComponentArray.h  ComponentManager.h  ComponentType.h  Entity.h  EntityManager.h  IComponentArray.h  System.h  SystemManager.h
include/ECS/Components/: Animator.h  BoxCollider.h  MeshRenderer.h  Name.h  Rectangle.h  RectangleRenderer.h  RenderHelper.h  Renderer.h  Sprite.h  SpriteRenderer.h  Text.h  TextRenderer.h  TilemapCollider.h  Transform.h
include/ECS/Helpers/: Animation.h  Collision.h  Color.h  Font.h  GlyphCache.h  Image.h  Material.h  RenderLayer.h  Shader.h  Sprite.h  glmExtension.h
include/ECS/Systems/: AnimationSystem.h  CollisionSystem.h  RenderSystem.h  TextRenderSystem.h  TransformParentSystem.h
include/Halib/: Entity.h  Entitysystem.h  Filesystem.h  Graphic.h  Halib.h  Image.h  Math.h  Misc.h  Rectangle.h  System.h  VecI2.h  Veci2.h
include/Halib/Audio/: Audio.h  Audiosystem.h  Music.h  Sound.h
include/Halib/Graphic/: Camera.h  Color.h  Font.h  Image.h  Misc.h  Render.h  Rendersystem.h  Sprite.h  Text.h  Tilemap.h
include/Halib/Math/: Path.h  Vec.h  Vec2.h  VecI2.h  VecTemplate.h
old_include/Halib/Math/: Path.h  Vec.h
source/: Color.cpp  CrashHandler.cpp  ECSException.cpp  EngineException.cpp  Entity.cpp  Entitysystem.cpp  FileSystem.cpp  Filesystem.cpp  Image.cpp  Input.cpp  Misc.cpp  Miscellaneous.cpp  Scene.cpp  SceneManager.cpp  System.cpp  Systems.cpp  TimeManager.cpp  main.cpp
source/Audio/: Audio.cpp  Audiosystem.cpp
source/ECS/: ComponentManager.cpp  ECSSystem.cpp  Entity.cpp  EntityManager.cpp  EntityUtility.cpp  SystemManager.cpp
source/ECS/Components/: MeshRenderer.cpp  RenderHelper.cpp  Renderer.cpp  SpriteRenderer.cpp  Text.cpp  Transform.cpp
source/ECS/Helpers/: Animation.cpp  Collision.cpp  Color.cpp  Font.cpp  GlyphCache.cpp  Image.cpp  Shader.cpp  Sprite.cpp
source/ECS/Systems/: AnimationSystem.cpp  CollisionSystem.cpp  RenderSystem.cpp  TextRenderSystem.cpp  TransformParentSystem.cpp
source/Graphic/: Color.cpp  Font.cpp  Image.cpp  Misc.cpp  Rect.cpp  Render.cpp  Rendersystem.cpp  Sprite.cpp  Text.cpp  Tilemap.cpp
source/Math/: Path.cpp  Rectangle.cpp  Vec2.cpp  VecI2.cpp
